[tool.poetry]
name = "phillips_hue"
version = "0.1.0"
description = ""
authors = ["Nate Nowack <nate@prefect.io>"]

[tool.poetry.dependencies]
python = "^3.10"
phue = "^1.1"
prefect = "2.0a6"
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
